--- a/Evo/EvoHistGlue/EvoHistGlue.vcxproj
+++ b/Evo/EvoHistGlue/EvoHistGlue.vcxproj
@@ -79,11 +79,11 @@
     <CodeAnalysisRuleSet>NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(SolutionDir)\..\Toolbox\Utilities;$(SolutionDir)\..\Toolbox\Win32_utilities;$(SolutionDir)Evolution;$(SolutionDir)EvoWindows;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Win32_history;$(SolutionDir)HistoryInterface;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)\Toolbox\Utilities;$(SolutionDir)\Toolbox\Win32_utilities;$(SolutionDir)Evolution;$(SolutionDir)EvoWindows;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Win32_history;$(SolutionDir)HistoryInterface;$(IncludePath)</IncludePath>
     <CodeAnalysisRuleSet>NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(SolutionDir)\..\Toolbox\Utilities;$(SolutionDir)\..\Toolbox\Win32_utilities;$(SolutionDir)Evolution;$(SolutionDir)EvoWindows;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Win32_history;$(SolutionDir)HistoryInterface;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)\Toolbox\Utilities;$(SolutionDir)\Toolbox\Win32_utilities;$(SolutionDir)Evolution;$(SolutionDir)EvoWindows;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Win32_history;$(SolutionDir)HistoryInterface;$(IncludePath)</IncludePath>
     <CodeAnalysisRuleSet>NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
