refactoring, #includes removed

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,15 +1,15 @@
-MoveWindow IDM_APPL_WINDOW -1842 1099 1746 1031
-MoveWindow IDM_MAIN_WINDOW -1833 1152 1728 949
-MoveWindow IDM_MINI_WINDOW -723 1160 406 406
-MoveWindow IDM_MONITOR_WINDOW -1665 1908 591 434
+MoveWindow IDM_APPL_WINDOW -1928 1072 1937 1049
+MoveWindow IDM_MAIN_WINDOW -1919 1125 1919 967
+MoveWindow IDM_MINI_WINDOW -723 1160 412 412
+MoveWindow IDM_MONITOR_WINDOW -1316 1471 597 440
 MoveWindow IDM_CRSR_WINDOW -733 1521 302 227
 MoveWindow IDM_PARAM_WINDOW -1895 1317 282 556
 MoveWindow IDM_PERF_WINDOW -397 1643 302 352
-MoveWindow IDM_DESC_WINDOW -1506 1352 398 398
-MoveWindow IDM_SIG_DESIGNER -1431 1310 598 498
-MoveWindow IDM_LUT_DESIGNER -797 1745 398 298
-MoveWindow IDM_VIEWER_WINDOW -797 1745 398 298
-ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_DESC_WINDOW -1506 1352 404 404
+MoveWindow IDM_SIG_DESIGNER -1431 1310 604 504
+MoveWindow IDM_LUT_DESIGNER -797 1745 404 304
+MoveWindow IDM_VIEWER_WINDOW -797 1745 404 304
+ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
