--- a/Blokus/BlokusCore/BlokusCore.vcxproj
+++ b/Blokus/BlokusCore/BlokusCore.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BlokusCore.ixx" />
+    <ClCompile Include="BoardMap.ixx" />
     <ClCompile Include="Util.ixx" />
     <ClCompile Include="Board.ixx" />
     <ClCompile Include="Components.cpp" />
