--- a/Blokus/BlokusCore/BlokusCore.vcxproj.filters
+++ b/Blokus/BlokusCore/BlokusCore.vcxproj.filters
@@ -75,5 +75,8 @@
     <ClCompile Include="Util.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BoardMap.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
