--- a/Blokus/BlokusApp/BlokusApp.vcxproj.filters
+++ b/Blokus/BlokusApp/BlokusApp.vcxproj.filters
@@ -33,5 +33,14 @@
     <ClCompile Include="BlokusWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Resource.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BlokusAppMenu.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BlokusAppMenu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
