--- a/Blokus/BlokusCore/BlokusCore.vcxproj
+++ b/Blokus/BlokusCore/BlokusCore.vcxproj
@@ -21,9 +21,9 @@
   <ItemGroup>
     <ClCompile Include="BlokusCoordSys.ixx" />
     <ClCompile Include="BlokusCore.ixx" />
+    <ClCompile Include="BlokusDrawContext.ixx" />
     <ClCompile Include="BlokusPreferences.ixx" />
     <ClCompile Include="BoardMap.ixx" />
-    <ClCompile Include="Util.ixx" />
     <ClCompile Include="Board.ixx" />
     <ClCompile Include="Components.cpp" />
     <ClCompile Include="Components.ixx" />
@@ -32,7 +32,7 @@
     <ClCompile Include="Move.ixx" />
     <ClCompile Include="Piece.ixx" />
     <ClCompile Include="PieceTypeId.ixx" />
-    <ClCompile Include="CoordPos.ixx" />
+    <ClCompile Include="BlokusCoords.ixx" />
     <ClCompile Include="PieceType.cpp" />
     <ClCompile Include="PieceType.ixx" />
     <ClCompile Include="Player.cpp" />
