--- a/Blokus/BlokusCore/BlokusCore.vcxproj.filters
+++ b/Blokus/BlokusCore/BlokusCore.vcxproj.filters
@@ -84,5 +84,14 @@
     <ClCompile Include="BlokusCoords.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Strategy.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="StrategyTakeFirst.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="StrategyRandom.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
