--- a/Blokus/BlokusCore/BlokusCore.vcxproj
+++ b/Blokus/BlokusCore/BlokusCore.vcxproj
@@ -29,6 +29,7 @@
     <ClCompile Include="Components.ixx" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Game.ixx" />
+    <ClCompile Include="GameProtocol.ixx" />
     <ClCompile Include="Move.ixx" />
     <ClCompile Include="Piece.ixx" />
     <ClCompile Include="PieceTypeId.ixx" />
@@ -39,12 +40,14 @@
     <ClCompile Include="Player.ixx" />
     <ClCompile Include="PlayerId.ixx" />
     <ClCompile Include="Players.ixx" />
+    <ClCompile Include="RuleServerInterface.ixx" />
     <ClCompile Include="Shape.cpp" />
     <ClCompile Include="Shape.ixx" />
     <ClCompile Include="ShapeId.ixx" />
     <ClCompile Include="Strategy.ixx" />
     <ClCompile Include="StrategyRandom.ixx" />
     <ClCompile Include="StrategyTakeFirst.ixx" />
+    <ClCompile Include="Tournament.ixx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Toolbox\BasicUtils\BasicUtils.vcxproj">
