--- a/Blokus/BlokusApp/BlokusApp.vcxproj.filters
+++ b/Blokus/BlokusApp/BlokusApp.vcxproj.filters
@@ -42,5 +42,8 @@
     <ClCompile Include="BlokusAppMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TournamentWindow.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
