--- a/Blokus/BlokusCore/BlokusCore.vcxproj.filters
+++ b/Blokus/BlokusCore/BlokusCore.vcxproj.filters
@@ -102,5 +102,11 @@
     <ClCompile Include="RuleServerInterface.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PlayerTypes.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerTypes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
