Blokus refactoring, Animation.SetUpdateLambda

--- a/Blokus/BlokusCore/BlokusCore.vcxproj
+++ b/Blokus/BlokusCore/BlokusCore.vcxproj
@@ -30,7 +30,7 @@
     <ClCompile Include="Match.cpp" />
     <ClCompile Include="Match.ixx" />
     <ClCompile Include="MatchProtocol.ixx" />
-    <ClCompile Include="Move.ixx" />
+    <ClCompile Include="BlokusMove.ixx" />
     <ClCompile Include="Piece.ixx" />
     <ClCompile Include="PieceTypeId.ixx" />
     <ClCompile Include="BlokusCoords.ixx" />
