--- a/Blokus/BlokusCore/BlokusCore.vcxproj
+++ b/Blokus/BlokusCore/BlokusCore.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="BlokusCore.ixx" />
     <ClCompile Include="BlokusPreferences.ixx" />
     <ClCompile Include="BlokusUtilities.ixx" />
+    <ClCompile Include="Board.cpp" />
     <ClCompile Include="BoardMap.ixx" />
     <ClCompile Include="Board.ixx" />
     <ClCompile Include="Components.cpp" />
